logos on mobile fix

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -715,10 +715,10 @@ div.about-question-item:last-child {
 }
 
 .sponsor-logos{
-  display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+  text-align: center;
 }
 
 .sponsor-logo{
